--- a/style.css
+++ b/style.css
@@ -309,3 +309,11 @@ button.js-btn-selectMonth:active::before {
 .spanStrong {
   color: #49bfb7;
 }
+
+.spanYearStrong {
+  color: #49bfb7;
+}
+
+.spanDaysStrong {
+  color: #49bfb7;
+}
